Complete full-stack landing page builder system with Supabase integration, user management, analytics, and deployment guides

--- a/env.example
+++ b/env.example
@@ -1,20 +1,30 @@
-# ZenoPay Configuration
-ZENOPAY_API_KEY=ArtYqYpjmi8UjbWqxhCe7SLqpSCbws-_7vjudTuGR91PT6pmWX85lapiuq7xpXsJ2BkPZ9gkxDEDotPgtjdV6g
+# Supabase Configuration
+SUPABASE_URL=your_supabase_project_url
+SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+
+# JWT Configuration
+JWT_SECRET=your_super_secret_jwt_key_here_make_it_long_and_random
 
 # Server Configuration
 PORT=3000
+HOST=0.0.0.0
+NODE_ENV=development
 
-# Webhook URL (your domain)
-WEBHOOK_URL=https://your-domain.com/api/payments/webhook
+# Frontend URL (for CORS)
+FRONTEND_URL=http://localhost:3000
 
-# Email Configuration (for course access emails)
-EMAIL_SERVICE=sendgrid
+# Base URL for generated pages
+BASE_URL=http://localhost:3000
+
+# Cloud Storage (optional)
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+
+# Email Service (optional)
 SENDGRID_API_KEY=your_sendgrid_api_key
 FROM_EMAIL=noreply@yourdomain.com
 
-# Database Configuration (if using database)
-DATABASE_URL=your_database_url_here
-
-# Security
-JWT_SECRET=your_jwt_secret_here
-NODE_ENV=production
+# Analytics (optional)
+GOOGLE_ANALYTICS_ID=GA_MEASUREMENT_ID
