--- a/package.json
+++ b/package.json
@@ -1,48 +1,13 @@
 {
-  "name": "landing-page-builder",
-  "version": "2.0.0",
-  "description": "Full-stack landing page builder with user management and custom URLs",
-  "main": "server.js",
+  "name": "onepage-landing",
+  "version": "1.0.0",
+  "description": "Simple one-page landing page with payment integration",
+  "main": "index.html",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "npm run build:client",
-    "build:client": "vite build",
-    "install:client": "cd client && npm install",
-    "dev:client": "cd client && npm run dev",
-    "dev:full": "concurrently \"npm run dev\" \"npm run dev:client\""
+    "start": "python3 -m http.server 8000",
+    "dev": "python3 -m http.server 8000"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "@supabase/supabase-js": "^2.38.0",
-    "uuid": "^9.0.1",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0",
-    "axios": "^1.6.2",
-    "sharp": "^0.33.0",
-    "cloudinary": "^1.41.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2",
-    "concurrently": "^8.2.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "keywords": [
-    "landing-page",
-    "builder",
-    "drag-drop",
-    "supabase",
-    "full-stack"
-  ],
-  "author": "Landing Page Builder Team",
+  "keywords": ["landing-page", "tailwindcss", "payment"],
+  "author": "",
   "license": "MIT"
 }
